1.5.1: 2020 Aug 31

* now wrapping ofWindowSetting.h for window mode constants

1.5.0: 2019 Dec 10

* updated to OF 0.11.0
* updated to ofxLua 1.4.0

1.4.4: 2019 Sep 30

* updated to ofxLua 1.3.6

* reset background auto on script (re)load
* now wrapping ofSaveImage/ofLoadImage and ofPolyline vertex vector

1.4.3: 2019 May 04

* updated to ofxLua 1.3.4

* fixed ofIndexType not being wrapped which kept ofMesh index functions from
  accepting numbers
* now wrapping ofUnicode, ofAlphabet, & ofTrueTypeSettings

1.4.2: 2018 Aug 10

* fixed broken osc.Message size_t handling 
* added glm/gtx/fast_square_root.hpp functions

1.4.1: 2018 Aug 04

* fixed issue where strings were unrecognized by the loaf and osc bindings

1.4.0: 2018 Jul 20

* updated to OF 0.10.0

* fixed X.h type clash build errors on Linux (reported by Keith O'Hara)
* fixed CTL key commands for Windows & Linux (CTL+f, CTL+r, CTL+c)

1.3.0: 2017 Dec 01

* make sure script setup() is called within a GL context
* added loaf.getHostname() which returns network hostname string
* added openframeworks version to verbose print

1.2.0: 2017 Oct 16

* added -e/--exit commandline option to exit loaf after a script error
* added -r/--reload commandline option to reload loaf after a script error

1.1.0: 2017 Aug 09

* added --gl commandline option to set OpenGL version
* added mouseX & mouseY global variables

* updated with ofGLUtils.h constants and function bindings

* fixed crash due to ofShader not being unbound on deletion
* fixed of3dPrimitive child class bindings missing inherited functions

1.0.0: 2017 Mar 17

first release

0.1.0: Nov 2016

initial work & testing