@@ -1,5 +1,6 @@
 1.5.1: 2020 Aug 31
 
+* fixed -f fullscreen option being applied after script setup()
 * now wrapping ofWindowSetting.h for window mode constants
 
 1.5.0: 2019 Dec 10
